--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,3 +4,6 @@ RUN wget https://apt.llvm.org/llvm.sh
 RUN chmod +x llvm.sh
 RUN ./llvm.sh 13
 RUN ln -s /usr/bin/clang-13 /usr/bin/clang
+RUN ln -s /usr/bin/lldb-13 /usr/bin/lldb
+RUN ln -s /usr/bin/lld-13 /usr/bin/lld
+RUN ln -s /usr/bin/clangd-13 /usr/bin/clangd
