--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian:bullseye-20210902
-RUN apt-get update && apt-get install -y lsb-release wget software-properties-common gnupg cppcheck git make
+RUN apt-get update && apt-get install -y lsb-release wget software-properties-common gnupg cppcheck git make tree
 RUN wget https://apt.llvm.org/llvm.sh
 RUN chmod +x llvm.sh
 RUN ./llvm.sh 13
