--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,5 +3,5 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
-  "extensions": ["ms-vscode.cpptools", "jbenden.c-cpp-flylint"]
+  "extensions": ["ms-vscode.cpptools", "jbenden.c-cpp-flylint"],
 }
