--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,17 +14,14 @@
     "-Wall",
     "-Wextra"
   ],
-  "files.associations": {
-    "stdbool.h": "c",
-    "test-utils.h": "c",
-    "sort.test.h": "c"
-  },
   "[c]": {
     "files.insertFinalNewline": true
   },
-  "files.exclude": {
-    // "**/*.o": true,
-    // "**/*.d": true,
-    // "**/*.test": true
-  }
+  "files.associations": {
+    "array": "c",
+    "string": "c",
+    "string_view": "c",
+    "ranges": "c"
+  },
+  "editor.rename.enablePreview": false,
 }
