--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,8 @@
     "array": "c",
     "string": "c",
     "string_view": "c",
-    "ranges": "c"
+    "ranges": "c",
+    "stddef.h": "c"
   },
   "editor.rename.enablePreview": false,
 }
