--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,4 +4,6 @@
     "dockerfile": "Dockerfile"
   },
   "extensions": ["ms-vscode.cpptools", "jbenden.c-cpp-flylint"],
+  // necessary to be able to use lldb in the container
+  "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
 }
